Fix double-scrollbars on notes

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1602,7 +1602,6 @@ p.example-instructions {
   background-color: #fafafa;
   padding: 10px;
   word-wrap: normal;
-  overflow-x: scroll;
 
   p {
     margin-bottom: 10px;
